--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,6 +8,11 @@
   display: inline;
 }
 
+img.logo {
+  max-width: 150px;
+  margin-inline: 1rem;
+}
+
 body {
   font: 100% "Nunito Sans", sans-serif;
   background-color: #2E2E2E;
@@ -113,17 +118,27 @@ p.subtitle {
 
 section {
   display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 720px) {
+  section {
+    flex-direction: row;
+  }
 }
 
 div.box {
-  width: 100%;
   min-width: 200px;
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.1);
   background: linear-gradient(#fff, #fff) padding-box, linear-gradient(to right, rgba(255, 63, 74, 0.8) 0%, rgba(116, 58, 192, 0.8) 50%, rgba(37, 50, 169, 0.8) 100%) border-box;
   border: 2px solid transparent;
-  margin-inline: 1rem;
+  margin: 1rem;
+}
+@media screen and (min-width: 720px) {
+  div.box {
+    width: 100%;
+  }
 }
 
 div.card {
